--- a/StudentskaSluzba/StudentskaSluzba/StudentskaSluzba.csproj
+++ b/StudentskaSluzba/StudentskaSluzba/StudentskaSluzba.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Baza.cs" />
+    <Compile Include="DateExtension.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
