--- a/StudentskaSluzba/StudentskaSluzba/StudentskaSluzba.csproj
+++ b/StudentskaSluzba/StudentskaSluzba/StudentskaSluzba.csproj
@@ -104,6 +104,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spolovi.cs" />
     <Compile Include="StudentskaSluzbaDbContext.cs" />
     <Compile Include="Uloga.cs" />
     <EmbeddedResource Include="Form1.resx">
